# world-threads

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CROSS_AGENT_COMMS.md  Makefile  README.md  package.json
.claude/: settings.json
.githooks/: post-commit  pre-commit
api-server/: Cargo.toml
api-server/src/: billing.rs  main.rs  usage.rs
docs/: CLI_AGENT_DISCOVERY.md  CNAME  GENESIS_WIZARD.md  INVARIANTS.md  PLAIN-TRADITION.md  SUBSTRATE_ATLAS.md  VOICE.md  index.html
experiments/: README.md  aaron-authority-synthesis.md  aaron-darren-verdict-rule-evaluate.md  aaron-joy-three-framings.md  craft-notes-register-neutral-vs-inviting.md  cross-bearing-rick-darren-pastoral-anchor.md  darren-authority-synthesis.md  darren-joy-three-framings.md  five-char-mission-feedback.md  formula-alone-vs-full-stack-aaron-darren.md  gentle-release-aaron-replication.md  jasper-glad-thing-replay.md  john-stillness-register.md  pastoral-register-triad-synthesis.md  tell-truth-counterfeit-intimacy-bite.md  ten-experiments-arc-minimal-stack.md  user-boundary-db-toggle-ab.md  user-boundary-honored-aaron-darren.md  world-is-primary-characterized-tier-null-aaron-humor.md
fixtures/: anchor_lift_top_5_v3_form_2026_05_09.md  anti_drift_ground_truth.json  imago_dei_refusal_ground_truth.json  imago_dei_refusal_invariant_draft.md  kavod_pattern_transfiguration_fixture.json  resurrection_substrate_already_produces_fixture.json
frontend/: package-lock.json  package.json  vite.config.ts
reports/: 2026-04-21-1903-philosophy-trajectory.md  2026-04-21-2009-mission-audit.md  2026-04-21-2019-craft-stack-audit.md  2026-04-22-1326-harness-day.md  2026-04-22-2236-stances-hold.md  2026-04-22-after-the-audits.md  2026-04-22-pick-your-frame.md  2026-04-23-0121-pattern-becomes-policy.md  2026-04-23-0125-genesis-as-inheritance.md  2026-04-23-0612-character-at-the-table.md  2026-04-23-1152-the-loop-ran-out-loud.md  2026-04-23-1233-the-instrument-ran.md  2026-04-23-1241-aaron-darren-null-result.md  2026-04-23-1326-john-stillness-refuted-register-still-elsewhere.md  2026-04-23-1400-better-lab-vision.md  2026-04-23-1928-synthesize-shipped-john-mode-b.md  2026-04-23-1939-replay-shipped-jasper-glad-thing-ab.md  2026-04-23-1958-aaron-authority-mode-b.md  2026-04-23-2008-darren-authority-mode-b.md  2026-04-23-2010-pastoral-register-triad-cross-synthesis.md  2026-04-23-2013-aaron-joy-three-framings-more-pulled-than-jasper.md  2026-04-23-2017-darren-joy-three-framings-pattern-like-jasper.md  2026-04-24-1142-llm-graded-rubric-tempers-architecture-effect.md  2026-04-24-1430-the-lab-grades-itself.md  2026-04-24-1500-retiring-cluster-then-rubric-followup.md  2026-04-24-1700-polish-audit-shipped-then-demoted.md  2026-04-24-1745-demotion-re-run-confirms.md  2026-04-24-1835-invariants-first-experiment.md  2026-04-24-1920-compound-intervention-refuted-surfaces-rule-proliferation-effect.md  2026-04-24-1950-follow-ups-resolve-interaction-effect.md  2026-04-24-2200-invariants-first-length-claim-refuted-at-claim-tier.md  2026-04-25-0200-the-mission-earns-its-place-at-the-top.md  2026-04-25-0300-simulated-first-time-user-experience-maggie.md  2026-04-25-1555-jasper-glad-thing-n10-complicates-claim.md  2026-04-25-1700-tell-truth-counterfeit-intimacy-bite.md  2026-04-25-1730-five-character-mission-feedback-the-too-available-finding.md  2026-04-25-1759-aaron-darren-verdict-and-aaron-gentle-release.md  2026-04-25-1827-register-invitation-rerun-prompt-conditional-failure-modes.md  2026-04-25-1952-what-the-measurement-taught-the-stack.md  2026-04-25-2044-formula-alone-characterized-tier-aaron-darren.md  (+410 more)
scripts/: _session_open_play_state_reader.py  agent-cli-bootstrap.sh  anthropic_affordances_bench.py  anthropic_pipeline_reconstruction.py  character_identity_runtime_experiment.js  chat-improvement-loop.sh  check-cross-agent-comms.sh  check-homepage-practice-fragment-sync.sh  check-sapphire-parity.py  check-skill-frontmatter.sh  check-skill-parity.sh  compare-register-shift-runs.py  compensation_tax_w_cross_substrate.py  compensation_tax_w_thick_grid_steven_rick.py  compensation_tax_w_thick_maisie.py  compensation_tax_w_thick_reconstruction_seed3.py  (+50 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_imagined_chapter.rs
src-tauri/experiments/: triad-supercalibrator-substrate.md
src-tauri/src/: lib.rs
src-tauri/src/ai/: character_identity_audit.rs  character_identity_payload.rs  chiptune_score.rs  conscience.rs  consultant.rs  custodiem_witness_battery.rs  derivation.rs  google.rs  load_test_anchor.rs  mod.rs  momentstamp.rs  mood.rs  openai.rs  orchestrator.rs  prompts.rs  relational_stance.rs  substrate_atlas.rs  vow_trace.rs
src-tauri/src/auth/: context.rs  mod.rs
src-tauri/src/commands/: audio_cmds.rs  backup_cmds.rs  canon_cmds.rs  character_cmds.rs  chat_cmds.rs  consultant_cmds.rs  daily_reading_cmds.rs  event_cmds.rs  genesis_cmds.rs  group_chat_cmds.rs  illustration_cmds.rs  imagined_chapter_cmds.rs  inventory_cmds.rs  journal_cmds.rs  location_cmds.rs  meanwhile_cmds.rs  memory_cmds.rs  mod.rs  mood_cmds.rs  novel_cmds.rs  portrait_cmds.rs  quest_cmds.rs  reaction_cmds.rs  reactions_helpers.rs  settings_cmds.rs  user_journal_cmds.rs  user_profile_cmds.rs  video_cmds.rs  world_cmds.rs  world_image_cmds.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/db/queries/: canon.rs  character.rs  cross_thread.rs  daily_reading.rs  group.rs  imagined_chapters.rs  inventory.rs  journal.rs  load_test_anchor.rs  location.rs  location_derivation.rs  meanwhile.rs  memory.rs  message.rs  misc.rs  mod.rs  novel.rs  portrait.rs  quest.rs  relational_stance.rs  user_journal.rs  user_profile.rs  world.rs  world_image.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/: character_identity_payload.rs
src-tauri/tests/fixtures/character_identity/: aaron.json  aaron.reference.json  jasper_finn.json  jasper_finn.reference.json  maisie_rourke.json  maisie_rourke.reference.json  pastor_rick.json  pastor_rick.reference.json  steven.json  steven.reference.json
(+1813 files in other folders)
