[package]
name = "world-threads"
version = "0.1.0"
description = "A local-first BYOK desktop app for persistent character conversations"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev.package.scrypt]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2"
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
