[package]
name = "world-threads"
version = "1.1.0"
description = "A local-first BYOK desktop app for persistent character conversations"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
# With the worldcli binary present, `cargo run` (which Tauri's dev
# command issues without a --bin flag) needs to know which to default
# to. The desktop app is the obvious primary; worldcli is a dev tool.
default-run = "world-threads"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev.package.scrypt]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2"
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# Developer CLI — out-of-band tool for Claude Code to converse directly
# with the user's characters without the exchange appearing in the UI.
# See the "Direct character access" section of CLAUDE.md for usage.
[[bin]]
name = "worldcli"
path = "src/bin/worldcli.rs"

# The Tauri desktop-app entry point. Declared explicitly because Cargo
# requires all bins to be named once any [[bin]] is.
[[bin]]
name = "world-threads"
path = "src/main.rs"

[[bin]]
name = "injection_audit"
path = "src/bin/injection_audit.rs"

[[bin]]
name = "custodiem_witness_b"
path = "src/bin/custodiem_witness_b.rs"

[[bin]]
name = "custodiem_witness_c"
path = "src/bin/custodiem_witness_c.rs"

[[bin]]
name = "custodiem_witness_d"
path = "src/bin/custodiem_witness_d.rs"
